--- a/js_of_ocaml-ppx_deriving_json.opam
+++ b/js_of_ocaml-ppx_deriving_json.opam
@@ -4,8 +4,12 @@ authors:      "Ocsigen team"
 bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
 homepage:     "http://ocsigen.org/js_of_ocaml"
 dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
-
-version: "dev"
+synopsis:     "Compiler from OCaml bytecode to Javascript"
+description: """
+Js_of_ocaml is a compiler from OCaml bytecode to JavaScript.
+It makes it possible to run pure OCaml programs in JavaScript
+environment like browsers and Node.js
+"""
 
 build: [["dune" "build" "-p" name "-j" jobs]]
 
@@ -19,5 +23,3 @@ depends: [
 conflicts: [
   "ppx_deriving"            {<="4.2.0"}
 ]
-
-synopsis: "Compiler from OCaml bytecode to Javascript"
