--- a/js_of_ocaml-toplevel.opam
+++ b/js_of_ocaml-toplevel.opam
@@ -4,8 +4,12 @@ authors:      "Ocsigen team"
 bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
 homepage:     "http://ocsigen.org/js_of_ocaml"
 dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
-
-name: "js_of_ocaml-toplevel"
+synopsis:     "Compiler from OCaml bytecode to Javascript"
+description: """
+Js_of_ocaml is a compiler from OCaml bytecode to JavaScript.
+It makes it possible to run pure OCaml programs in JavaScript
+environment like browsers and Node.js
+"""
 
 build: [["dune" "build" "-p" name "-j" jobs]]
 
@@ -17,5 +21,3 @@ depends: [
   "js_of_ocaml-ppx"
   "js_of_ocaml" {>= "3.0"}
 ]
-
-synopsis: "Compiler from OCaml bytecode to Javascript"
