--- a/compiler/tests/expect_tests/dune
+++ b/compiler/tests/expect_tests/dune
@@ -1,6 +1,8 @@
 (library
  (name expect_tests)
  (libraries js_of_ocaml_compiler unix ocaml-compiler-libs.bytecomp)
- (inline_tests)
+ (inline_tests 
+  (flags -allow-output-patterns)
+  (deps (file ../../js_of_ocaml.exe)))
  (preprocess (pps ppx_expect)))
 
