many old regression tests are now expect_tests

--- a/compiler/tests/dune
+++ b/compiler/tests/dune
@@ -1,14 +1,9 @@
-(executable
- (name main))
+(library
+ (name expect_tests)
+ (libraries js_of_ocaml_compiler unix)
+ (inline_tests 
+  (flags -allow-output-patterns)
+  (deps (file ../js_of_ocaml.exe)))
+ (preprocess (pps ppx_expect)))
 
-(rule
-  (targets main.js)
-  (action  (run %{bin:js_of_ocaml}
-                  --enable with-js-error
-                  --no-runtime %{lib:js_of_ocaml-compiler:runtime.js}
-                  %{dep:main.bc} -o %{targets}))
- )
-
-(alias
-  (name runtest)
-  (action (run node %{dep:main.js})))
+(include_subdirs unqualified)
