--- a/compiler/tests/dune
+++ b/compiler/tests/dune
@@ -3,7 +3,9 @@
  (libraries js_of_ocaml_compiler unix)
  (inline_tests 
   (flags -allow-output-patterns)
-  (deps (file ../js_of_ocaml.exe)))
+  (deps 
+    (file ../js_of_ocaml.exe)
+    (file ../../runtime/runtime.js)))
  (preprocess (pps ppx_expect)))
 
 (include_subdirs unqualified)
