find current runtime file

--- a/compiler/tests/dune
+++ b/compiler/tests/dune
@@ -1,9 +1,11 @@
 (library
  (name expect_tests)
- (libraries js_of_ocaml_compiler unix)
+ (libraries js_of_ocaml_compiler unix str)
  (inline_tests 
   (flags -allow-output-patterns)
-  (deps (file ../js_of_ocaml.exe)))
+  (deps
+    (file ../js_of_ocaml.exe)
+    (file ../../runtime/runtime.js)))
  (preprocess (pps ppx_expect)))
 
 (include_subdirs unqualified)
