--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: c
+sudo: false
+
+cache:
+    directories:
+      - $HOME/.opam
+      - $HOME/Library/Caches/Homebrew
 
 matrix:
   include:
