--- a/compiler/dune
+++ b/compiler/dune
@@ -5,6 +5,7 @@
   (libraries
     js_of_ocaml-compiler
     cmdliner
+    compiler-libs.common
     (select empty-findlib.ml from
      ;; Only link js_of_ocaml-compiler.findlib-support if it exists
      (js_of_ocaml-compiler.findlib-support -> empty-findlib.ml.in)
