--- a/js_of_ocaml-ppx.opam
+++ b/js_of_ocaml-ppx.opam
@@ -16,10 +16,7 @@ build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "ocaml" {>= "4.02.0"}
   "dune" {build & >= "1.2"}
-  "ocaml-migrate-parsetree"
-  "ppx_tools_versioned"
+  "ocaml-migrate-parsetree" {>= "1.3.1"}
+  "ppx_tools_versioned" {>= "5.2.2"}
   "js_of_ocaml" {>= "3.0"}
-]
-conflicts: [
-  "ppx_tools_versioned"     {<="5.0beta0"}
 ]
