--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -18,11 +18,8 @@ build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "ocaml" {>= "4.02.0"}
   "dune" {build & >= "1.2"}
-  "ocaml-migrate-parsetree"
-  "ppx_tools_versioned"
+  "ocaml-migrate-parsetree" {>= "1.3.1"}
+  "ppx_tools_versioned" {>= "5.2.2"}
   "uchar"
   "js_of_ocaml-compiler"
-]
-conflicts: [
-  "ppx_tools_versioned"     {<= "5.0beta0"}
 ]
