Deriving_json: remove the ppx_deriving dependency (#809)

--- a/js_of_ocaml-ppx_deriving_json.opam
+++ b/js_of_ocaml-ppx_deriving_json.opam
@@ -14,12 +14,10 @@ environment like browsers and Node.js
 build: [["dune" "build" "-p" name "-j" jobs]]
 
 depends: [
-  "ocaml" {> "4.03.0"}
+  "ocaml" {>= "4.04.1"}
   "dune" {build & >= "1.2"}
   "js_of_ocaml"
-  "ppx_tools"
-  "ppx_deriving"
-]
-conflicts: [
-  "ppx_deriving"            {<="4.2.0"}
+  "ppx_tools_versioned"
+  "ocaml-migrate-parsetree"
+  "ppxlib"
 ]
