--- a/compiler/lib/dune
+++ b/compiler/lib/dune
@@ -2,12 +2,13 @@
   (name js_of_ocaml_compiler)
   (public_name js_of_ocaml-compiler)
   (synopsis "Js_of_ocaml compiler library")
-  (libraries compiler-libs.common bytes
+  (libraries compiler-libs.common compiler-libs.bytecomp bytes
    (select source_map_io.ml from
     (yojson -> source_map_yojson.ml.in)
     (       -> source_map_unsupported.ml.in))
   )
   (flags (:standard -w -7-37 -safe-string))
+  (preprocess (pps ppx_optcomp_light))
   )
 
 (rule
@@ -36,14 +37,6 @@
  (deps standard.mly)
  (mode promote)
  (action (ignore-stderr (run menhir --stdlib . --explain %{dep:annot_parser.mly}))))
-
-(rule
- (targets ocaml_compiler.ml)
- (action (run %{bin:cppo} -V OCAML:%{ocaml_version}
-          ;; Uncomment for bucklescript support
-          ;; -D BUCKLESCRIPT
-          %{dep:ocaml_compiler.cppo.ml} -o %{targets}))
- )
 
 (rule
  (targets compiler_version.ml)
