--- a/lib/tests/dune
+++ b/lib/tests/dune
@@ -1,5 +1,5 @@
 (executables
-  (names main getenv nodefs)
+  (names main nodefs)
   (libraries js_of_ocaml unix)
   (preprocess (pps ppx_js_internal)))
 
@@ -15,18 +15,6 @@
   (package js_of_ocaml)
   (action (run node --pending-deprecation %{dep:main.js})))
 
-
-(rule
-  (targets getenv.js)
-  (action (run %{bin:js_of_ocaml}
-                  --no-runtime %{lib:js_of_ocaml-compiler:runtime.js}
-                  --setenv A=A --setenv C=C --setenv "D=±" --pretty
-                  %{dep:getenv.bc} -o %{targets})))
-
-(alias
-  (name runtest)
-  (package js_of_ocaml)
-  (action (run node --pending-deprecation %{dep:getenv.js})))
 
 (rule
   (targets nodefs.js)
