update dune files

--- a/lib/deriving_json/tests/dune
+++ b/lib/deriving_json/tests/dune
@@ -1,5 +1,6 @@
 (library
   (name deriving_expect_tests)
   (libraries unix js_of_ocaml js_of_ocaml.deriving)
-  (inline_tests)
+  (inline_tests
+    (modes js))
   (preprocess (pps ppx_expect ppx_deriving_json)))
