--- a/lib/tests/dune
+++ b/lib/tests/dune
@@ -1,5 +1,6 @@
 (library
   (name jsoo_lib_expect_tests)
   (libraries js_of_ocaml unix)
-  (inline_tests)
+  (inline_tests
+    (modes js))
   (preprocess (pps ppx_js_internal ppx_expect)))
