Ppx: drop ppx_tools_versioned deps in ppx_deriving_json

--- a/ppx/ppx_deriving_json/lib/dune
+++ b/ppx/ppx_deriving_json/lib/dune
@@ -8,4 +8,4 @@
   )
   (ppx_runtime_libraries js_of_ocaml.deriving)
   (kind ppx_deriver)
-  (preprocess (pps ppx_tools_versioned.metaquot_407)))
+  (preprocess (pps ppxlib.metaquot)))
