--- a/toplevel/examples/lwt_toplevel/dune
+++ b/toplevel/examples/lwt_toplevel/dune
@@ -59,13 +59,12 @@
       js_of_ocaml.deriving
       lwt bigarray
       tyxml.functor
+      tyxml.functor:html_types.cmi
       react reactiveData
       js_of_ocaml js_of_ocaml-lwt
       js_of_ocaml-tyxml
       js_of_ocaml-toplevel
       dynlink
-;;    FIX: html_types is missing
-;;    html_types.cmi
       )))
 
 (rule
