ppx: more ppx_deriving_json tests

--- a/ppx/ppx_deriving_json/tests/dune
+++ b/ppx/ppx_deriving_json/tests/dune
@@ -16,7 +16,18 @@
            ../../../lib/deriving_json/.js_of_ocaml_deriving.objs/byte/deriving_Json_lexer.cmi)
   (action  (run %{exe:main.bc} %{dep:ppx.mlt})))
 
+(rule
+  (targets gen.mlt.corrected)
+  (deps    ../../../lib/deriving_json/.js_of_ocaml_deriving.objs/byte/deriving_Json.cmi
+           ../../../lib/deriving_json/.js_of_ocaml_deriving.objs/byte/deriving_Json_lexer.cmi)
+  (action  (run %{exe:main.bc} %{dep:gen.mlt})))
+
 (alias
    (name   runtest)
 ;; (package js_of_ocaml-ppx)
    (action (diff ppx.mlt ppx.mlt.corrected)))
+
+(alias
+   (name   runtest)
+;; (package js_of_ocaml-ppx)
+   (action (diff gen.mlt gen.mlt.corrected)))
