Build: toplevel_expect_test with 409 compat

--- a/tools/toplevel_expect/dune
+++ b/tools/toplevel_expect/dune
@@ -8,5 +8,6 @@
   	   toplevel_expect_test.ml-4.04
 	   toplevel_expect_test.ml-4.05
            toplevel_expect_test.ml-4.08
+           toplevel_expect_test.ml-4.09
 	   toplevel_expect_test.ml-default)
   (action  (with-stdout-to %{targets} (run %{deps}))))
