--- a/compiler/tests-lib/lib-digest/dune
+++ b/compiler/tests-lib/lib-digest/dune
@@ -11,5 +11,5 @@
 
 (alias
   (name runtest)
-  (deps md5.referencejs md5.reference)
-  (action (diff md5.referencejs md5.reference)))
+  (deps md5.reference md5.referencejs)
+  (action (diff md5.reference md5.referencejs)))
