--- a/compiler/tests-lib/lib-filename/dune
+++ b/compiler/tests-lib/lib-filename/dune
@@ -11,8 +11,8 @@
 
 (alias
   (name runtest)
-  (deps suffix.referencejs suffix.reference)
-  (action (diff suffix.referencejs suffix.reference)))
+  (deps suffix.reference suffix.referencejs)
+  (action (diff suffix.reference suffix.referencejs)))
 
 (rule
   (target extension.referencejs)
@@ -21,5 +21,5 @@
 
 (alias
   (name runtest)
-  (deps extension.referencejs extension.reference)
-  (action (diff extension.referencejs extension.reference)))
+  (deps extension.reference extension.referencejs)
+  (action (diff extension.reference extension.referencejs)))
