--- a/compiler/tests-lib/lib-hashtbl/dune
+++ b/compiler/tests-lib/lib-hashtbl/dune
@@ -21,5 +21,5 @@
 
 (alias
   (name runtest)
-  (deps htbl.referencejs htbl.reference)
-  (action (diff htbl.referencejs htbl.reference)))
+  (deps htbl.reference htbl.referencejs)
+  (action (diff htbl.reference htbl.referencejs)))
