--- a/compiler/num-testsuite/dune
+++ b/compiler/num-testsuite/dune
@@ -1,9 +1,9 @@
 (executable
   (name main)
-  (libraries nums)
+  (libraries num)
   (modes native js)
-  (js_of_ocaml (javascript_files ../../../runtime/nat.js))
-  (flags (:standard -linkall -w -3-7-33-35-37 -safe-string -open Nums))
+  (js_of_ocaml (javascript_files ../../runtime/nat.js))
+  (flags (:standard -linkall -w -3-7-33-35-37 -safe-string))
 )
 
 (rule
