--- a/ppx/ppx_js/lib/dune
+++ b/ppx/ppx_js/lib/dune
@@ -1,14 +1,7 @@
 (library
-  (name ppx_js)
+  (name ppx_js_rewriter)
   (public_name js_of_ocaml-ppx)
   (synopsis "Js_of_ocaml ppx")
-  (libraries compiler-libs.common
-             ocaml-migrate-parsetree)
+  (libraries ppx_js)
   (ppx_runtime_libraries js_of_ocaml)
-  (kind ppx_rewriter)
-  (preprocess (pps ppx_tools_versioned.metaquot_408)))
-
-
-(rule
-  (targets ppx_js_internal.ml)
-  (action (copy %{dep:../lib_internal/ppx_js_internal.ml} %{targets})))
+  (kind ppx_rewriter))
