--- a/js_of_ocaml-lwt.opam
+++ b/js_of_ocaml-lwt.opam
@@ -17,7 +17,7 @@ depends: [
   "ocaml" {>= "4.02.0"}
   "dune" {>= "1.11.1"}
   "lwt" {>= "2.4.4"}
-  "js_of_ocaml" {>= "3.2"}
-  "js_of_ocaml-ppx"
+  "js_of_ocaml" {= version}
+  "js_of_ocaml-ppx" {= version}
 ]
 depopts: [ "graphics" "lwt_log" ]
