--- a/js_of_ocaml-ppx.opam
+++ b/js_of_ocaml-ppx.opam
@@ -18,5 +18,5 @@ depends: [
   "dune" {>= "1.11.1"}
   "ocaml-migrate-parsetree" {>= "1.4"}
   "ppx_tools_versioned" {>= "5.2.3"}
-  "js_of_ocaml" {>= "3.0"}
+  "js_of_ocaml" {= version}
 ]
