--- a/js_of_ocaml-toplevel.opam
+++ b/js_of_ocaml-toplevel.opam
@@ -17,7 +17,7 @@ depends: [
   "ocaml" {>= "4.02.0"}
   "dune" {>= "1.11.1"}
   "ocamlfind" {>= "1.5.1"}
-  "js_of_ocaml-compiler"
-  "js_of_ocaml-ppx"
-  "js_of_ocaml" {>= "3.0"}
+  "js_of_ocaml-compiler" {= version}
+  "js_of_ocaml-ppx" {= version}
+  "js_of_ocaml" {= version}
 ]
