--- a/js_of_ocaml-tyxml.opam
+++ b/js_of_ocaml-tyxml.opam
@@ -18,6 +18,6 @@ depends: [
   "dune" {>= "1.11.1"}
   "tyxml" {>= "4.3"}
   "reactiveData" {>= "0.2"}
-  "js_of_ocaml" {>= "3.0"}
-  "js_of_ocaml-ppx"
+  "js_of_ocaml" {= version}
+  "js_of_ocaml-ppx" {= version}
 ]
