--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -21,5 +21,5 @@ depends: [
   "ocaml-migrate-parsetree" {>= "1.4"}
   "ppx_tools_versioned" {>= "5.2.3"}
   "uchar"
-  "js_of_ocaml-compiler"
+  "js_of_ocaml-compiler" {= version}
 ]
