Compiler: rewrite debug path using BUILD_PATH_PREFIX_MAP

--- a/compiler/lib/source_map_yojson.ml.in
+++ b/compiler/lib/source_map_yojson.ml.in
@@ -19,33 +19,12 @@
 
 open Source_map
 
-(* copied from ocaml/utils/misc.ml *)
-let get_build_path_prefix_map =
-  let init = ref false in
-  let map_cache = ref None in
-  fun () ->
-    if not !init
-    then (
-      init := true;
-      match Sys.getenv "BUILD_PATH_PREFIX_MAP" with
-      | exception Not_found -> ()
-      | encoded_map -> (
-          match Build_path_prefix_map.decode_map encoded_map with
-          | Error err ->
-              failwith
-              @@ Printf.sprintf
-                   "Invalid value for the environment variable BUILD_PATH_PREFIX_MAP: %s"
-                   err
-          | Ok map -> map_cache := Some map));
-
-    !map_cache
-
 let json t =
   let rewrite_path path =
     if Filename.is_relative path
     then path
     else
-      match get_build_path_prefix_map () with
+      match Build_path_prefix_map.get_build_path_prefix_map () with
       | Some map -> Build_path_prefix_map.rewrite map path
       | None -> path
   in
@@ -58,8 +37,8 @@ let json t =
           | None -> ""
           | Some s -> rewrite_path s) )
     ; "names", `List (List.map (fun s -> `String s) t.names)
-    ; "mappings", `String (string_of_mapping t.mappings)
     ; "sources", `List (List.map (fun s -> `String (rewrite_path s)) t.sources)
+    ; "mappings", `String (string_of_mapping t.mappings)
     ; ( "sourcesContent"
       , `List
           (match t.sources_content with
