--- a/compiler/jsoo-testsuite/dune
+++ b/compiler/jsoo-testsuite/dune
@@ -1,7 +1,7 @@
 (library
  (name jsoo_testsuite)
  (libraries)
- (c_names bigarray_stubs)
+ (foreign_stubs (language c)(names bigarray_stubs))
  (inline_tests
   (flags -allow-output-patterns)
   (modes js))
