--- a/compiler/num-testsuite/dune
+++ b/compiler/num-testsuite/dune
@@ -17,7 +17,7 @@
   (deps main.exe)
   (action (with-stdout-to %{target} (run ./main.exe))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps main.reference main.referencejs)
   (action (diff main.reference main.referencejs)))
