--- a/compiler/ocaml-testsuite/lib-bytes/dune
+++ b/compiler/ocaml-testsuite/lib-bytes/dune
@@ -1,7 +1,7 @@
 (executables
   (names test_bytes binary)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps test_bytes.bc.js)
   (action (with-stdout-to %{target} (run node ./test_bytes.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps test_bytes.reference test_bytes.referencejs)
   (action (diff test_bytes.reference test_bytes.referencejs)))
 
