--- a/compiler/ocaml-testsuite/lib-digest/dune
+++ b/compiler/ocaml-testsuite/lib-digest/dune
@@ -1,7 +1,7 @@
 (executables
   (names md5)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,7 +9,7 @@
   (deps md5.bc.js)
   (action (with-stdout-to %{target} (run node ./md5.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps md5.reference md5.referencejs)
   (action (diff md5.reference md5.referencejs)))
