--- a/compiler/ocaml-testsuite/lib-filename/dune
+++ b/compiler/ocaml-testsuite/lib-filename/dune
@@ -1,7 +1,7 @@
 (executables
   (names suffix extension)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps suffix.bc.js)
   (action (with-stdout-to %{target} (run node ./suffix.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps suffix.reference suffix.referencejs)
   (action (diff suffix.reference suffix.referencejs)))
 
@@ -19,7 +19,7 @@
   (deps extension.bc.js)
   (action (with-stdout-to %{target} (run node ./extension.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps extension.reference extension.referencejs)
   (action (diff extension.reference extension.referencejs)))
