--- a/compiler/ocaml-testsuite/lib-format/dune
+++ b/compiler/ocaml-testsuite/lib-format/dune
@@ -1,7 +1,7 @@
 (executables
   (names pr6824 print_if_newline pp_print_custom_break)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps pr6824.bc.js)
   (action (with-stdout-to %{target} (run node ./pr6824.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps pr6824.reference pr6824.referencejs)
   (action (diff pr6824.reference pr6824.referencejs)))
 
@@ -19,8 +19,8 @@
   (deps print_if_newline.bc.js)
   (action (with-stdout-to %{target} (run node ./print_if_newline.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps print_if_newline.reference print_if_newline.referencejs)
   (action (diff print_if_newline.reference print_if_newline.referencejs)))
 
@@ -29,7 +29,7 @@
   (deps pp_print_custom_break.bc.js)
   (action (with-stdout-to %{target} (run node ./pp_print_custom_break.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps pp_print_custom_break.reference pp_print_custom_break.referencejs)
   (action (diff pp_print_custom_break.reference pp_print_custom_break.referencejs)))
