--- a/compiler/ocaml-testsuite/lib-set/dune
+++ b/compiler/ocaml-testsuite/lib-set/dune
@@ -1,7 +1,7 @@
 (executables
   (names testmap testset)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps testmap.bc.js)
   (action (with-stdout-to %{target} (run node ./testmap.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps testmap.reference testmap.referencejs)
   (action (diff testmap.reference testmap.referencejs)))
 
@@ -19,7 +19,7 @@
   (deps testset.bc.js)
   (action (with-stdout-to %{target} (run node ./testset.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps testset.reference testset.referencejs)
   (action (diff testset.reference testset.referencejs)))
