--- a/compiler/ocaml-testsuite/lib-string/dune
+++ b/compiler/ocaml-testsuite/lib-string/dune
@@ -1,7 +1,7 @@
 (executables
   (names test_string)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,7 +9,7 @@
   (deps test_string.bc.js)
   (action (with-stdout-to %{target} (run node ./test_string.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps test_string.reference test_string.referencejs)
   (action (diff test_string.reference test_string.referencejs)))
