--- a/compiler/ocaml-testsuite/prim-bigstring/dune
+++ b/compiler/ocaml-testsuite/prim-bigstring/dune
@@ -1,7 +1,7 @@
 (executables
   (names bigstring_access string_access)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps bigstring_access.bc.js)
   (action (with-stdout-to %{target} (run node ./bigstring_access.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps bigstring_access.reference bigstring_access.referencejs)
   (action (diff bigstring_access.reference bigstring_access.referencejs)))
 
@@ -19,7 +19,7 @@
   (deps string_access.bc.js)
   (action (with-stdout-to %{target} (run node ./string_access.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps string_access.reference string_access.referencejs)
   (action (diff string_access.reference string_access.referencejs)))
