--- a/compiler/ocaml-testsuite/prim-revapply/dune
+++ b/compiler/ocaml-testsuite/prim-revapply/dune
@@ -1,7 +1,7 @@
 (executables
   (names apply revapply)
   (libraries)
-  (js_of_ocaml)
+  (modes js)
 )
 
 (rule
@@ -9,8 +9,8 @@
   (deps apply.bc.js)
   (action (with-stdout-to %{target} (run node ./apply.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps apply.reference apply.referencejs)
   (action (diff apply.reference apply.referencejs)))
 
@@ -19,7 +19,7 @@
   (deps revapply.bc.js)
   (action (with-stdout-to %{target} (run node ./revapply.bc.js))))
 
-(alias
-  (name runtest)
+(rule
+  (alias runtest)
   (deps revapply.reference revapply.referencejs)
   (action (diff revapply.reference revapply.referencejs)))
