--- a/lib/js_of_ocaml/dune
+++ b/lib/js_of_ocaml/dune
@@ -2,7 +2,7 @@
  (name js_of_ocaml)
  (public_name js_of_ocaml)
  (libraries uchar bytes)
- (c_names js_of_ocaml_stubs)
+ (foreign_stubs (language c) (names js_of_ocaml_stubs))
  (preprocess (pps ppx_js_internal)))
 
 (rule
