--- a/ppx/ppx_js/tests/dune
+++ b/ppx/ppx_js/tests/dune
@@ -1,13 +1,14 @@
 (executables
   (names main)
   (libraries toplevel_expect_test js_of_ocaml-ppx stdlib)
+  (modes byte)
   (link_flags (-linkall)))
 
 (rule
   (targets ppx.mlt.corrected)
   (action  (run %{exe:main.bc} %{dep:ppx.mlt})))
 
-(alias
-   (name   runtest)
+(rule
+   (alias   runtest)
    (package js_of_ocaml-ppx)
    (action (diff ppx.mlt ppx.mlt.corrected)))
