--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
     - os: linux
       env: OCAML_VERSION=4.09 MODE=opam
     - os: linux
+      env: OCAML_VERSION=4.10 MODE=opam
+    - os: linux
       env: OCAML_VERSION=4.09 MODE=build
       name: "4.09 all targets"
     - os: osx
