--- a/compiler/tests-ocaml/lib-str/dune
+++ b/compiler/tests-ocaml/lib-str/dune
@@ -9,7 +9,7 @@
   (deps t01.bc.js)
   (action (with-stdout-to %{target} (run node ./t01.bc.js))))
 
-(rule
-  (alias runtest)
+(alias
+  (name runtest)
   (deps t01.reference t01.referencejs)
   (action (diff t01.reference t01.referencejs)))
