--- a/compiler/tests/dune
+++ b/compiler/tests/dune
@@ -4,9 +4,9 @@
  (inline_tests
   (flags -allow-output-patterns)
   (deps
-    (file ../../compiler/js_of_ocaml.exe)
-    (file ../../compiler/jsoo_minify.exe)
-    (file ../../runtime/runtime.js)))
+    (file ../../compiler/js_of_ocaml/js_of_ocaml.exe)
+    (file ../../compiler/jsoo_minify/jsoo_minify.exe)
+  ))
  (preprocess (pps ppx_expect)))
 
 (include_subdirs unqualified)
