--- a/examples/cubes/dune
+++ b/examples/cubes/dune
@@ -7,7 +7,7 @@
 (rule
   (targets cubes.js)
   (action
-    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
+    (run %{bin:js_of_ocaml}
          --source-map %{dep:cubes.bc} -o %{targets} --pretty)))
 
 (alias
