--- a/examples/hyperbolic/dune
+++ b/examples/hyperbolic/dune
@@ -7,7 +7,7 @@
 (rule
   (targets hypertree.js)
   (action
-    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
+    (run %{bin:js_of_ocaml}
          --source-map %{dep:hypertree.bc} -o %{targets} --pretty
          -I ./ --file %{dep:image_info.json} --file %{dep:messages.json} --file %{dep:tree.json})))
 
