--- a/examples/webgl/dune
+++ b/examples/webgl/dune
@@ -7,7 +7,7 @@
 (rule
   (targets webgldemo.js)
   (action
-    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
+    (run %{bin:js_of_ocaml}
          --source-map %{dep:webgldemo.bc} -o %{targets} --pretty
          -I ./ --file %{dep:monkey.model})))
 
