--- a/compiler/lib-runtime/dune
+++ b/compiler/lib-runtime/dune
@@ -5,6 +5,6 @@
   )
 
 (rule
-  (target jsoo_runtime.ml)
+  (target files.ml)
   (deps gen/gen.exe ../../runtime/runtime.js ../../runtime/toplevel.js ../../runtime/dynlink.js)
   (action (with-stdout-to %{target} (run %{deps}))))
