--- a/examples/boulderdash/dune
+++ b/examples/boulderdash/dune
@@ -8,7 +8,7 @@
   (targets boulderdash.js)
   (deps (glob_files maps/*.map))
   (action
-    (run %{bin:js_of_ocaml}
+    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
          --source-map %{dep:boulderdash.bc} -o %{targets} --pretty
          -I ./ --file %{dep:maps.txt} --file maps)))
 
