--- a/toplevel/examples/lwt_toplevel/dune
+++ b/toplevel/examples/lwt_toplevel/dune
@@ -39,6 +39,7 @@
           -I ./
           --pretty
           --toplevel
+          --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
           %{dep:test_dynlink.cmo})))
 
 (rule
@@ -79,7 +80,9 @@
 	  --export %{dep:export.txt}
           --toplevel
 	  --disable shortvar
-          %{lib:js_of_ocaml-compiler:toplevel.js}
+          --noruntime
+	  %{lib:js_of_ocaml-compiler:runtime.js}
+	  %{lib:js_of_ocaml-compiler:toplevel.js}
           %{lib:js_of_ocaml-compiler:dynlink.js}
 	  %{dep:toplevel.bc}
 	  -o %{targets}
