--- a/toplevel/examples/eval/dune
+++ b/toplevel/examples/eval/dune
@@ -16,16 +16,13 @@
  (targets eval.js)
  (action
     (run %{bin:js_of_ocaml}
-	  --export %{dep:export.txt}
-          --toplevel
-	  --pretty
-          --noruntime
-	  %{lib:js_of_ocaml-compiler:runtime.js}
-	  %{lib:js_of_ocaml-compiler:toplevel.js}
-          %{lib:js_of_ocaml-compiler:dynlink.js}
-          %{dep:eval.bc}
-	  -o %{targets}
-          )))
+         --export %{dep:export.txt}
+         --toplevel
+         --pretty
+         +toplevel.js +dynlink.js
+         %{dep:eval.bc}
+         -o %{targets}
+    )))
 
 (alias
   (name default)
