--- a/compiler/tests-jsoo/dune
+++ b/compiler/tests-jsoo/dune
@@ -1,6 +1,6 @@
 (library
  (name jsoo_testsuite)
- (libraries)
+ (libraries unix)
  (foreign_stubs (language c)(names bigarray_stubs))
  (inline_tests
   (flags -allow-output-patterns)
