--- a/compiler/bin-js_of_ocaml/dune
+++ b/compiler/bin-js_of_ocaml/dune
@@ -19,7 +19,24 @@
   (targets js_of_ocaml.1)
   (action (with-stdout-to %{targets} (run %{bin:js_of_ocaml} --help=groff))))
 
+(rule
+  (targets js_of_ocaml-link.1)
+  (action (with-stdout-to %{targets} (run %{bin:js_of_ocaml} link --help=groff))))
+
+(rule
+  (targets js_of_ocaml-build-fs.1)
+  (action (with-stdout-to %{targets} (run %{bin:js_of_ocaml} build-fs --help=groff))))
+
+(rule
+  (targets js_of_ocaml-build-runtime.1)
+  (action (with-stdout-to %{targets} (run %{bin:js_of_ocaml} build-runtime --help=groff))))
+
 (install
   (section man)
   (package js_of_ocaml-compiler)
-  (files js_of_ocaml.1))
+  (files
+     js_of_ocaml.1
+     js_of_ocaml-link.1
+     js_of_ocaml-build-fs.1
+     js_of_ocaml-build-runtime.1
+  ))
