--- a/compiler/bin-js_of_ocaml/dune
+++ b/compiler/bin-js_of_ocaml/dune
@@ -41,3 +41,16 @@
      js_of_ocaml-build-fs.1
      js_of_ocaml-build-runtime.1
   ))
+
+
+;; Generate and install runtime.js for compatibility reasons
+
+(rule
+  (target runtime.js)
+  (action
+   (with-stdout-to %{target} (run %{bin:js_of_ocaml} print-standard-runtime))))
+
+(install
+  (section lib)
+  (package js_of_ocaml-compiler)
+  (files runtime.js))
