Compiler: add rule for js_of_ocaml.bc

--- a/compiler/bin-js_of_ocaml/dune
+++ b/compiler/bin-js_of_ocaml/dune
@@ -13,6 +13,7 @@
      (js_of_ocaml-compiler.findlib-support -> findlib_support.empty.ml)
      (                                     -> findlib_support.empty.ml))
     )
+  (modes byte native)
   (flags (:standard -safe-string))
   )
 
