--- a/compiler/lib/dune
+++ b/compiler/lib/dune
@@ -2,7 +2,7 @@
   (name js_of_ocaml_compiler)
   (public_name js_of_ocaml-compiler)
   (synopsis "Js_of_ocaml compiler library")
-  (libraries compiler-libs.common compiler-libs.bytecomp bytes
+  (libraries compiler-libs.common compiler-libs.bytecomp bytes menhirLib
    (select source_map_io.ml from
     (yojson -> source_map_io.yojson.ml)
     (       -> source_map_io.unsupported.ml))
@@ -30,7 +30,7 @@
  (targets js_parser.mli js_parser.ml)
  (deps standard.mly)
  (mode promote)
- (action (ignore-stderr (run menhir --stdlib . --external-tokens Js_token --explain %{dep:js_parser.mly}))))
+ (action (ignore-stderr (run menhir --stdlib . --table --external-tokens Js_token --explain %{dep:js_parser.mly}))))
 
 (rule
  (targets annot_parser.mli annot_parser.ml)
