--- a/js_of_ocaml-compiler.opam
+++ b/js_of_ocaml-compiler.opam
@@ -18,6 +18,7 @@ depends: [
   "dune" {>= "2.5"}
   "ppx_expect" {with-test & >= "v0.12.0"}
   "cmdliner"
+  "menhirLib"
   "ocaml-migrate-parsetree"
   "yojson" # It's optional, but we want users to be able to use source-map without pain.
 ]
