--- a/tools/toplevel_expect/dune
+++ b/tools/toplevel_expect/dune
@@ -10,5 +10,6 @@
            toplevel_expect_test.ml-4.08
            toplevel_expect_test.ml-4.09
            toplevel_expect_test.ml-4.10
+           toplevel_expect_test.ml-4.11
            toplevel_expect_test.ml-default)
   (action  (with-stdout-to %{targets} (run %{deps}))))
