--- a/compiler/lib/dune
+++ b/compiler/lib/dune
@@ -11,15 +11,7 @@
   (preprocess (pps ppx_optcomp_light))
   )
 
-(rule
-  (targets js_lexer.ml)
-  (mode promote)
-  (action (chdir %{workspace_root} (run %{bin:ocamllex} -q %{dep:js_lexer.mll} -o %{targets}))))
-
-(rule
-  (targets annot_lexer.ml)
-  (mode promote)
-  (action (chdir %{workspace_root} (run %{bin:ocamllex} -q %{dep:annot_lexer.mll} -o %{targets}))))
+(ocamllex js_lexer annot_lexer)
 
 ;; cp $(ocamlfind printconf path)/menhir/standard.mly standard.mly
 
